# social_net_arch

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  generate_test_data.sql  greeting.html  main.cpp  poco_server.mysql  poco_server.sql  registration.html  start_server.sh
init/: poco_server.sql
